# programmiersprachen-aufgabe-4

source/: CMakeLists.txt  aufgabe11.cpp  list.cpp  testlist.cpp
