add_executable(beispiel
 beispiel.cpp)

add_executable(aufgabe2bis4
 aufgabe2bis4.cpp)

add_executable(aufgabe5
 aufgabe5.cpp)

add_executable (aufgabe7
 aufgabe7.cpp
 circle.cpp
 vec2.cpp
 color.cpp
 mat2.cpp)


add_executable (aufgabe8
 aufgabe8.cpp
 circle.cpp
 vec2.cpp
 color.cpp
 mat2.cpp)

add_executable (aufgabe9
 aufgabe9.cpp)

add_executable (aufgabe10
 aufgabe10.cpp)

add_executable (aufgabe12
 aufgabe12.cpp
 circle.cpp
 vec2.cpp
 color.cpp
 mat2.cpp)




